tests/ui/lint/snapshots/decimal_file_mode_mkdir_all.snap
---
source: tests/ui/lint/mod.rs
---
  [error] File permission written in decimal
   ╭─[test.lis:5:35]
 4 │ fn main() {
 5 │   let _ = os.MkdirAll("/tmp/foo", 1000)
   ·                                   ──┬─
   ·                                     ╰── decimal 1000 is octal 0o1750
 6 │ }
   ╰────
  help: File permissions are conventionally written in octal. Use a `0o` prefix (for example `0o644`) so the bits line up with the rwx triples · code: [infer.decimal_file_mode]
