tests/ui/lint/snapshots/default_on_type_alias.snap
---
source: tests/ui/lint/mod.rs
---
  ✕ `#[default]` not on an enum variant
   ╭─[test.lis:2:1]
 1 │ 
 2 │ #[default]
   · ─────┬────
   ·      ╰── expected on a variant
 3 │ type Alias = int
   ╰────
  help: Place `#[default]` on the variant that is the enum's zero value · code: [attribute.default_not_on_enum_variant]
