tests/ui/lint/snapshots/deprecated_function.snap
---
source: tests/ui/lint/mod.rs
---
  ▲ Use of deprecated API
   ╭─[test.lis:8:11]
 7 │ fn main() {
 8 │   let _ = legacy()
   ·           ───┬──
   ·              ╰── not intended for new code
 9 │ }
   ╰────
  help: Use the new API instead · code: [lint.deprecated]
