tests/ui/lint/snapshots/deprecated_function_value.snap
---
source: tests/ui/lint/mod.rs
---
  ▲ Use of deprecated API
   ╭─[test.lis:8:11]
 7 │ fn main() {
 8 │   let f = legacy
   ·           ───┬──
   ·              ╰── not intended for new code
 9 │   let _ = f()
   ╰────
  help: Use the new API instead · code: [lint.deprecated]
