tests/ui/lint/snapshots/deprecated_interface_method.snap
---
source: tests/ui/lint/mod.rs
---
  ▲ Use of deprecated API
    ╭─[test.lis:16:3]
 15 │ fn read(s: Store) -> int {
 16 │   s.old_get()
    ·   ────┬────
    ·       ╰── not intended for new code
 17 │ }
    ╰────
  help: Use `fetch` instead · code: [lint.deprecated]
