tests/ui/lint/snapshots/deprecated_method.snap
---
source: tests/ui/lint/mod.rs
---
  ▲ Use of deprecated API
    ╭─[test.lis:13:11]
 12 │   let c = Cache {}
 13 │   let _ = c.warm()
    ·           ───┬──
    ·              ╰── not intended for new code
 14 │ }
    ╰────
  help: Use the new method instead · code: [lint.deprecated]
