tests/ui/lint/snapshots/deprecated_promoted_method.snap
---
source: tests/ui/lint/mod.rs
---
  ▲ Use of deprecated API
    ╭─[test.lis:20:11]
 19 │   let s = Server { Logger: Logger { prefix: "[api]" }, port: 8080 }
 20 │   let _ = s.old_log()
    ·           ────┬────
    ·               ╰── not intended for new code
 21 │ }
    ╰────
  help: Use the new method instead · code: [lint.deprecated]
